fixing code smells