@@ -100,7 +100,7 @@ public class SchoolService {
     try {
       writeLock.lock();
       this.mincodeSchoolEntityMap = schoolRepository.findAll().stream().collect(Collectors.toConcurrentMap(SchoolEntity::getMincode, Function.identity()));
-      this.schools = mincodeSchoolEntityMap.values().stream().map(SchoolMapper.mapper::toStructure).collect(Collectors.toList());
+      this.schools = mincodeSchoolEntityMap.values().stream().map(SchoolMapper.mapper::toStructure).toList();
       log.info("loaded {} entries into min code school map", this.schools.size());
     } finally {
       writeLock.unlock();
